--- a/Views/VoucherPaymentPage.xaml
+++ b/Views/VoucherPaymentPage.xaml
@@ -3,7 +3,34 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:MiddleBooth.Views">
-    <Grid Background="White">
+
+    <UserControl.Resources>
+        <Style x:Key="EllipticalButtonStyle" TargetType="Button">
+            <Setter Property="Width" Value="238"/>
+            <Setter Property="Height" Value="79"/>
+            <Setter Property="Background" Value="#AB2424"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Rectangle x:Name="background" Fill="{TemplateBinding Background}" RadiusX="39" RadiusY="39"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="background" Property="Fill" Value="#C82828"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+
+    <Grid Background="#79A282">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -13,24 +40,25 @@
         <!-- Header -->
         <TextBlock Grid.Row="0" 
                    Text="Pembayaran Voucher" 
-                   FontSize="32" 
+                   FontSize="36" 
                    FontWeight="Bold" 
-                   Foreground="MediumSeaGreen" 
+                   Foreground="White" 
                    HorizontalAlignment="Center"
                    Margin="0,30,0,20"/>
 
         <!-- Main Content -->
         <Border Grid.Row="1" 
-                BorderBrush="LightGray" 
+                Background="White"
+                BorderBrush="#F2F0E4" 
                 BorderThickness="1" 
                 CornerRadius="10" 
                 Padding="30" 
-                Margin="20,0">
+                Margin="40,20">
             <StackPanel VerticalAlignment="Center">
                 <TextBlock Text="Masukkan Kode Voucher" 
                            FontSize="20" 
                            FontWeight="SemiBold" 
-                           Foreground="DarkSlateGray" 
+                           Foreground="#333333" 
                            HorizontalAlignment="Center"
                            Margin="0,0,0,20"/>
 
@@ -44,9 +72,7 @@
 
                 <Button Content="Validasi Voucher" 
                         Command="{Binding ValidateVoucherCommand}" 
-                        Style="{StaticResource LargeButtonStyle}" 
-                        Width="250" 
-                        Height="60" 
+                        Style="{StaticResource EllipticalButtonStyle}" 
                         Margin="0,0,0,20"/>
 
                 <TextBlock Text="{Binding ValidationResult}" 
@@ -59,12 +85,11 @@
         </Border>
 
         <!-- Footer -->
-        <Button Grid.Row="2" 
-                Content="Kembali" 
-                Command="{Binding BackCommand}" 
-                Style="{StaticResource LargeButtonStyle}" 
-                Width="200" 
-                Height="50" 
-                Margin="0,20,0,30"/>
+        <Border Grid.Row="2" Background="#F2F0E4" Padding="20">
+            <Button Content="Kembali" 
+                    Command="{Binding BackCommand}" 
+                    Style="{StaticResource EllipticalButtonStyle}"
+                    HorizontalAlignment="Center"/>
+        </Border>
     </Grid>
 </UserControl>
